# release-tools

./: .gitignore  README.md  _test_releasepy.bash  changelog_spawn.sh  check_releasepy.bash  pixi_plan.md  pyproject.toml  release-bloom.py  release.py  release_summary.bash  setup.cfg  source_changelog.bash
bloom/: README  README.md  git_clone_all_remote_branches.bash  release-bloom.py  rename-gazebo-ros-pkgs-release.sh  rename-gazebo-ros-pkgs.bash  rename-gazebo3-ros-pkgs-release.sh  rename-gazebo4-ros-pkgs-release.sh  rename-gazebo5-ros-pkgs-release.sh  rename-gazebo6-ros-pkgs-release.sh  rename-gazebo7-ros-pkgs-release.sh  robocup-release.py  ros1_ign_bridge-release.py.bash  ros_gazebo_pkgs-release.py.bash  ros_gz_bridge-release.py.bash  ros_ign_bridge-release.py.bash
catkin-debs/: setup_apt_root.py
conda/: README.md
docs/: BUILDFARM_NODES.md  pr_job_workflow.md  stable_branch_workflow.md
drcsim/: release-drcsim.py
jenkins-scripts/: .reproduce_last_build.bat  BatchLib.bat  README.md  _bitbucket_configs.bash  _bitbucket_create_build_status_file.bash  _bitbucket_set_status.bash  bloom-debbuild.bash  bullet-debbuild.bash  cloudsim-check-accounts.bash  cloudsim-client-tools-debbuild.bash  cloudsim-client-tools-default-devel-precise.bash  cloudsim-client-tools-default.bash  cloudsim.bash  debian-git-debbuild.bash  drcsim-any-gazebo-any-devel-precise-amd64.bash  (+185 more)
source-repo-scripts/project_contributors/: README.md  pyproject.toml
source-repo-scripts/project_contributors/src/: collage.py  generate_contributors.py  get_merged_prs.py  github_api.py
(+559 files in other folders)
